--- a/package.json
+++ b/package.json
@@ -10,28 +10,28 @@
     "lint:fix": "eslint --fix ."
   },
   "dependencies": {
-    "@hookform/resolvers": "^3.3.2",
-    "@popperjs/core": "^2.11.8",
-    "bootstrap": "^5.3.2",
-    "gsap": "^3.12.3",
+    "@hookform/resolvers": "^3.0.1",
+    "@popperjs/core": "^2.11.7",
+    "bootstrap": "^5.2.3",
+    "gsap": "^3.11.5",
     "next": "13.2.4",
     "react": "18.2.0",
-    "react-countup": "^6.5.0",
+    "react-countup": "^6.4.2",
     "react-dom": "18.2.0",
-    "react-hook-form": "^7.48.2",
-    "react-intersection-observer": "^9.5.3",
-    "react-modal-video": "^2.0.1",
+    "react-hook-form": "^7.43.9",
+    "react-intersection-observer": "^9.4.3",
+    "react-modal-video": "^2.0.0",
     "react-slick": "^0.29.0",
-    "react-use": "^17.4.1",
-    "sass": "^1.69.5",
+    "react-use": "^17.4.0",
+    "sass": "^1.59.2",
     "slick-carousel": "^1.8.1",
     "split-text": "^1.0.0",
-    "swiper": "11.0.5",
+    "swiper": "^9.1.0",
     "wowjs": "^1.1.3",
-    "yup": "^1.3.2"
+    "yup": "^1.0.2"
   },
   "devDependencies": {
     "eslint": "8.54.0",
-    "eslint-config-next": "13.0.7"
+    "eslint-config-next": "14.0.3"
   }
 }
